<resources>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name" translatable="false">Work From Home</string>
    <string name="name" translatable="false">Work From Home</string>
    <string name="greet" translatable="false">Stay Home Stay Safe</string>
    <string name="app_greet">Hello there, Welcome!</string>
    <string name="Continue">Sign in to continue</string>
    <string name="UN">Username</string>
    <string name="PW">Password</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="Lg">Login</string>
    <string name="Nuser">New User?  SIGN UP</string>
    <string name="Welcome">Welcome!</string>
    <string name="sign_up_to">Sign Up for new start</string>
    <string name="LR">Leave Requests</string>
    <string name="view_leave">View Leave</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="Edit_leave">Edit Leave</string>
    <string name="delete_view">Delete View</string>
    <string name="view_profile">View Profile</string>
    <string name="attendance">Attendance</string>
    <string name="leave_request">Leave Requests</string>
    <string name="view_tasks">View Tasks</string>
    <string name="progress">Progress Reports</string>
    <string name="aboutUS">About Us</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="empID">Employee ID</string>
    <string name="dpt">Department</string>
    <string name="duration">Duration</string>
    <string name="frm">From</string>
    <string name="to">To</string>
    <string name="reason">Reason</string>
    <string name="type">Type</string>

    <string name="add_work_completed_heading">ADD WORK COMPLETED</string>
    <string name="update_work">Update Work</string>
    <string name="add_work_completed_reason_for_delay">Reason for delay</string>
    <string name="add_work_completed_button">Submit</string>
    <string name="Update">Update</string>
    <string name="work_view_header">VIEW WORK COMPLETED</string>
    <string name="work_view_updateButtom">Update</string>
    <string name="work_view_deleteButtom">Delete</string>

    <string name="stayhomestaysafe">Stay Home. Stay Safe.</string>
    <string name="signout">Sign Out</string>
    <string name="hi">Hello!</string>
    <string name="tr">Having trouble?</string>
    <string name="con">Contact us on 02033182226</string>
    <string name="b1">Employee Details</string>
    <string name="b2">Attendance</string>
    <string name="b3">Assign Tasks</string>
    <string name="b4">Progress Reports</string>
    <string name="b5">View Profile</string>
    <string name="taskassign">Assign Tasks</string>
    <string name="b6">View assigned tasks</string>
    <string name="b7">Add new task</string>
    <string name="addTask">Add New Task</string>
    <string name="eid">Employee ID</string>
    <string name="assign">Assign</string>
    <string name="taskType">Task Assigning</string>


    <string name="Employees">Employees</string>
    <string name="ID">Employee_ID</string>
    <string name="E_Name">Employee Name</string>
    <string name="DOB">Date of Birth</string>
    <string name="Add">Address</string>
    <string name="Email">Email</string>
    <string name="P_num">Phone Number</string>
    <string name="D_Name">Department Name</string>
    <string name="B_Sal">Basic Salary</string>
    <string name="P_In">Pay Incentives</string>
    <string name="W_Ho">Working Hours</string>
</resources>